# Rubik_Raylib_AI

./: CMakeLists.txt  README.md
include/: defines.h  randomize.h  rubik.h  surface.h
src/: main.cpp  randomize.cpp  rubik.cpp  surface.cpp
